TiposPuerto en Conexion models y DAO y Logic sin singleton